// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PopConfirm demo -- demo 1`] = `
.c1 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #ffffff;
  border: none;
  background: linear-gradient(135deg,#6488fc 0%,#3860f4 100%);
  box-shadow: 0 1px 3px -1px #5c76e8;
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c1:hover {
  background: linear-gradient(135deg,#5c76e8 0%,#3357df 100%);
  box-shadow: 0 5px 8px -4px #5c76e8;
}

.c0 {
  position: relative;
}

.c0 > .uc-fe-combine-controller {
  vertical-align: middle;
  display: inline-block;
}

.c0 > .uc-fe-combine-controller+.uc-fe-combine-controller {
  margin-left: 12px;
}

.c0 > .uc-fe-combine-controller+.uc-fe-combine-controller:focus {
  z-index: 2;
}

.c0 > .uc-fe-combine-controller+.uc-fe-combine-controller:hover {
  z-index: 3;
}

<div>
  <div
    class="uc-fe-combine c0"
    spacing="md"
  >
    <button
      class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-primary c1"
      type="button"
    >
      一点文字
    </button>
    <button
      class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-primary c1"
      type="button"
    >
      一些文字
    </button>
    <button
      class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-primary c1"
      type="button"
    >
      比较多的文字
    </button>
    <button
      class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-primary c1"
      type="button"
    >
      很多的文字
    </button>
  </div>
</div>
`;

exports[`PopConfirm demo -- onCancel 1`] = `
.c0 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #ffffff;
  border: none;
  background: linear-gradient(135deg,#6488fc 0%,#3860f4 100%);
  box-shadow: 0 1px 3px -1px #5c76e8;
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c0:hover {
  background: linear-gradient(135deg,#5c76e8 0%,#3357df 100%);
  box-shadow: 0 5px 8px -4px #5c76e8;
}

<button
  class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-primary c0"
  type="button"
>
  button
</button>
`;

exports[`PopConfirm demo -- onConfirm 1`] = `
.c0 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #ffffff;
  border: none;
  background: linear-gradient(135deg,#6488fc 0%,#3860f4 100%);
  box-shadow: 0 1px 3px -1px #5c76e8;
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c0:hover {
  background: linear-gradient(135deg,#5c76e8 0%,#3357df 100%);
  box-shadow: 0 5px 8px -4px #5c76e8;
}

<button
  class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-primary c0"
  type="button"
>
  button
</button>
`;

exports[`PopConfirm demo -- popConfirm 1`] = `
.c0 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #ffffff;
  border: none;
  background: linear-gradient(135deg,#6488fc 0%,#3860f4 100%);
  box-shadow: 0 1px 3px -1px #5c76e8;
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c0:hover {
  background: linear-gradient(135deg,#5c76e8 0%,#3357df 100%);
  box-shadow: 0 5px 8px -4px #5c76e8;
}

<button
  class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-primary c0"
  type="button"
>
  button
</button>
`;
